--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Koziar Plany</title>
+    
+    <link rel="icon" type="image/svg+xml" href="logo.svg">
+    <link rel="apple-touch-icon" href="logo.png"> <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="theme-color" content="#0a0a0a">
+
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <script src="https://unpkg.com/lucide@latest"></script>
     <style>
@@ -17,14 +23,9 @@
             --danger: #ff4444;
         }
 
+        /* ... zachowujemy poprzednie style ... */
         * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; }
-        body { 
-            margin: 0; 
-            font-family: 'Inter', sans-serif; 
-            background: var(--bg); 
-            color: var(--text); 
-            padding-bottom: 100px;
-        }
+        body { margin: 0; font-family: 'Inter', sans-serif; background: var(--bg); color: var(--text); padding-bottom: 100px; }
 
         header {
             position: sticky; top: 0; z-index: 100;
@@ -118,15 +119,19 @@
         tr.done input { color: #555; text-decoration: line-through; }
         input[type="checkbox"] { width: 22px; height: 22px; accent-color: var(--gold); cursor: pointer; }
 
+        /* ZMODYFIKOWANE PŁYWAJĄCE LOGO */
         .floating-logo {
             position: fixed; bottom: 20px; right: 20px;
             width: 60px; height: 60px;
-            background: #111; border: 2px solid var(--gold);
+            background: #0a0a0a; border: 2px solid var(--gold);
             border-radius: 50%; display: flex; align-items: center; justify-content: center;
             box-shadow: 0 4px 15px rgba(0,0,0,0.6); z-index: 1000; cursor: pointer;
-            padding: 5px; overflow: hidden;
+            padding: 0; overflow: hidden;
         }
-        .floating-logo svg { width: 100%; height: 100%; object-fit: contain; }
+        .floating-logo img { 
+            width: 100%; height: 100%; 
+            object-fit: cover; /* wypełnia całe kółko */
+        }
 
         .modal { position: fixed; inset: 0; background: rgba(0,0,0,0.9); display: none; align-items: center; justify-content: center; z-index: 1001; padding: 20px; }
         .modal.active { display: flex; }
@@ -152,18 +157,9 @@
     <div id="week"></div>
 </main>
 
-<div class="floating-logo" onclick="alert('Koziar Plany v1.4')" title="Logo">
-    <svg viewBox="0 0 800 600" xmlns="http://www.w3.org/2000/svg">
-        <g>
-            <text font-weight="bold" transform="matrix(5 0 0 5 350 350)" fill="#d4af37" font-family="monospace">K</text>
-            <path d="m211.51852,414.25926c-44,-63 -49,-24 -54,-98c-5,-74 38,-146 38,-146c0,0 -4.74075,-51.70371 -45,-68c-30,-10 -16,-9 -57,-17c-41,-8 -27,-7 -27,-7c0,0 68,-9 68,-9c0,0 72,-7 98,27c26,34 43,62 43,62c0,0 23,56 23,56c0,0 41,51 41,51c0,0 8,43 7,44c-1,1 -21,26 -23,26c-2,0 -24,-8 -28,-10c-4,-2 -35,-18 -35,-18c0,0 -7,0 -9,0c-2,0 -8,21 -6,26c2,5 13,22 14,24c1,2 -26,-1 -31,-5c-5,-4 -11,-7 -11,3c0,10 3,54 3,54c0,0 4,8 3,8c-1,0 26,72 -12,-3z" stroke="#d4af37" fill="none" stroke-width="5"/>
-            <circle cy="220" cx="245" r="15" fill="#d4af37"/>
-        </g>
-    </svg>
+<div class="floating-logo" onclick="alert('Koziar Plany v1.5')">
+    <img src="logo.svg" onerror="this.src='logo.png'; this.onerror=null;" alt="Logo">
 </div>
-
-<div class="modal" id="exportModal"><div class="modal-box"><h3 style="color:var(--gold);margin-top:0">Eksportuj</h3><textarea id="exportText" style="height:200px;width:100%;background:#000;color:#0d0;font-size:10px;" readonly></textarea><div style="display:grid;grid-template-columns:1fr 1fr;gap:10px;margin-top:10px"><button class="icon-btn gold" style="width:100%" onclick="downloadTSV()">ZAPISZ</button><button class="icon-btn" style="width:100%" onclick="closeModals()">ZAMKNIJ</button></div></div></div>
-<div class="modal" id="importModal"><div class="modal-box"><h3 style="color:var(--gold);margin-top:0">Importuj</h3><input type="file" id="importFile" accept=".tsv,.csv" onchange="handleFileSelect(event)" style="margin-bottom:10px;font-size:12px;"><textarea id="importText" style="height:150px;width:100%;background:#000;color:#fff;"></textarea><div style="display:grid;grid-template-columns:1fr 1fr;gap:10px;margin-top:10px"><button class="icon-btn gold" style="width:100%" onclick="applyImport()">IMPORTUJ</button><button class="icon-btn" style="width:100%" onclick="closeModals()">ANULUJ</button></div></div></div>
 
 <script>
 let plans = JSON.parse(localStorage.getItem("plans")) || {};
