--- a/index.html
+++ b/index.html
@@ -28,28 +28,44 @@
         * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; }
         body { margin: 0; font-family: 'Inter', sans-serif; background: var(--bg); color: var(--text); padding-bottom: 100px; }
 
+        /* POPRAWIONY HEADER MOBILNY */
         header {
             position: sticky; top: 0; z-index: 100;
-            background: rgba(10, 10, 10, 0.85);
+            background: rgba(10, 10, 10, 0.9);
             backdrop-filter: blur(15px);
-            padding: 10px 15px;
+            padding: 10px;
             border-bottom: 1px solid var(--border);
-            display: flex; align-items: center; gap: 8px;
+            display: flex; 
+            flex-wrap: wrap; /* Pozwala elementom przejść niżej jeśli braknie miejsca */
+            align-items: center; 
+            gap: 6px;
         }
 
-        select { 
+        #planSelect { 
             background: var(--card); color: var(--gold); 
-            border: 1px solid var(--border); padding: 8px; 
-            border-radius: 8px; flex-grow: 1; font-weight: 600; font-size: 14px;
+            border: 1px solid var(--border); padding: 10px; 
+            border-radius: 8px; 
+            flex: 1; /* Zajmuje całą dostępną przestrzeń */
+            min-width: 140px; /* Nie pozwoli się ścisnąć za bardzo */
+            max-width: 100%; /* Nie wyjdzie poza ekran */
+            font-weight: 600; font-size: 14px;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis; /* Dodaje "..." gdy nazwa jest za długa */
         }
         
+        .header-actions {
+            display: flex;
+            gap: 5px;
+            flex-shrink: 0; /* Nie pozwala ikonom się ścisnąć */
+        }
+
         .icon-btn {
             background: var(--card); color: var(--text);
             border: 1px solid var(--border);
-            width: 40px; height: 40px;
+            width: 38px; height: 38px;
             display: flex; align-items: center; justify-content: center;
             border-radius: 8px; cursor: pointer; transition: 0.2s;
-            flex-shrink: 0;
         }
         .icon-btn.gold { background: var(--gold); color: #000; border: none; }
 
@@ -96,9 +112,9 @@
         input { width: 100%; background: transparent; border: none; color: var(--text); padding: 12px 2px; font-size: 15px; text-align: center; }
         input:focus { background: rgba(255,255,255,0.05); outline: none; }
         
-        .ex-name { text-align: left; padding-left: 10px; width: auto; min-width: 120px; }
+        .ex-name { text-align: left; padding-left: 10px; width: auto; min-width: 110px; }
         .ex-name input { text-align: left; font-weight: 500; }
-        .col-s, .col-p, .col-kg { width: 45px; }
+        .col-s, .col-p, .col-kg { width: 42px; }
         .col-check { width: 40px; }
 
         .edit-ui { display: none; width: 80px; }
@@ -148,11 +164,13 @@
 
 <header>
     <select id="planSelect" onchange="loadPlan()"></select>
-    <button class="icon-btn gold" onclick="newPlan()"><i data-lucide="plus"></i></button>
-    <button class="icon-btn" onclick="resetWeek()"><i data-lucide="rotate-ccw"></i></button>
-    <button class="icon-btn" onclick="openExport()"><i data-lucide="share-2"></i></button>
-    <button class="icon-btn" onclick="openImport()"><i data-lucide="download"></i></button>
-    <button class="icon-btn" style="color:var(--danger)" onclick="deletePlan()"><i data-lucide="trash-2"></i></button>
+    <div class="header-actions">
+        <button class="icon-btn gold" onclick="newPlan()"><i data-lucide="plus"></i></button>
+        <button class="icon-btn" onclick="resetWeek()"><i data-lucide="rotate-ccw"></i></button>
+        <button class="icon-btn" onclick="openExport()"><i data-lucide="share-2"></i></button>
+        <button class="icon-btn" onclick="openImport()"><i data-lucide="download"></i></button>
+        <button class="icon-btn" style="color:var(--danger)" onclick="deletePlan()"><i data-lucide="trash-2"></i></button>
+    </div>
 </header>
 
 <main>
@@ -163,7 +181,7 @@
     <div id="week"></div>
 </main>
 
-<div class="floating-logo" onclick="alert('Koziar Plany v1.9')">
+<div class="floating-logo" onclick="alert('Koziar Plany v1.91 Mobile-Ready')">
     <img src="logo.png" alt="K" onerror="this.style.display='none'">
 </div>
 
@@ -179,11 +197,11 @@ function getDefaultPlans() {
     return {
         [DEFAULT_PLAN_NAME]: {
             version: GLOBAL_PLAN_VERSION,
-            notes: "Zasady: Przykładowy 3 dniowy plan na przetrenowanie wszystkich partii. Rób ćwiczenia do upadku, notuj ciężary, jeśli robisz więcej powtórzeń tym samym ciężarem co tydzień temu - Dołóż sobie. Baw się dobrze",
+            notes: "Zasady: Przykładowy 3 dniowy plan na przetrenowanie wszystkich partii. Rób ćwiczenia do upadku, notuj ciężary. Baw się dobrze!",
             days: [
-                { name: "Poniedziałek - Upper A", active: true, rows: [["Przysiady","4","6-10",""],["Wyciskanie ławka płaska","4","6-10",""],["Wiosłowanie","4","8-12",""],["OHP","4","8-12",""],["Biceps","3","8-12",""],["Triceps","3","8-12",""],["Brzuch","4","8-12",""]] },
+                { name: "Poniedziałek - Upper A", active: true, rows: [["Przysiady","4","6-10",""],["Wyciskanie płaska","4","6-10",""],["Wiosłowanie","4","8-12",""],["OHP","4","8-12",""],["Biceps","3","8-12",""],["Triceps","3","8-12",""],["Brzuch","4","8-12",""]] },
                 { name: "Wtorek", active: false, rows: [] },
-                { name: "Środa - FBW B", active: true, rows: [["Wyciskanie ławka płaska","4","6-10",""],["Suwnica/Przysiad wąsko","4","8-12",""],["Podciąganie neutralny chwyt","4","8-12",""],["Wznosy","3","8-12",""],["Triceps","3","8-12",""],["Biceps","3","8-12",""],["Łydki","4","15+",""]] },
+                { name: "Środa - FBW B", active: true, rows: [["Wyciskanie płaska","4","6-10",""],["Suwnica/Przysiad","4","8-12",""],["Podciąganie","4","8-12",""],["Wznosy","3","8-12",""],["Triceps","3","8-12",""],["Biceps","3","8-12",""],["Łydki","4","15+",""]] },
                 { name: "Czwartek", active: false, rows: [] },
                 { name: "Piątek - FBW C", active: true, rows: [["Przysiad","4","6-10",""],["Martwy ciąg","4","6-10",""],["Wiosłowanie szeroko","4","8-12",""],["Wyciskanie skos","3","8-12",""],["Dipy","3","8-12",""],["Biceps","4","8-12",""],["Brzuch","4","8-12",""]] },
                 { name: "Sobota", active: false, rows: [] },
@@ -193,14 +211,12 @@ function getDefaultPlans() {
     };
 }
 
-// --- LOGIKA DANYCH ---
 let plans = JSON.parse(localStorage.getItem("plans")) || {};
 let checks = JSON.parse(localStorage.getItem("checks")) || {};
 let currentPlan = localStorage.getItem("currentPlanName");
 
 const defaultPlans = getDefaultPlans();
 
-// Aktualizacja wersji planu domyślnego
 if (!plans[DEFAULT_PLAN_NAME] || plans[DEFAULT_PLAN_NAME].version !== GLOBAL_PLAN_VERSION) {
     plans[DEFAULT_PLAN_NAME] = defaultPlans[DEFAULT_PLAN_NAME];
 }
@@ -209,7 +225,6 @@ if (!currentPlan || !plans[currentPlan]) {
     currentPlan = DEFAULT_PLAN_NAME;
 }
 
-// Migracja starych formatów
 Object.keys(plans).forEach(key => { 
     if (Array.isArray(plans[key])) plans[key] = { notes: "", days: plans[key] }; 
 });
@@ -223,7 +238,6 @@ function save() {
     localStorage.setItem("currentPlanName", currentPlan);
 }
 
-// --- UI I RENDEROWANIE ---
 function autoHeight(el) { el.style.height = "auto"; el.style.height = (el.scrollHeight) + "px"; }
 function saveNotes() { if (currentPlan) { plans[currentPlan].notes = document.getElementById("planNotes").value; save(); } }
 function updDayName(di, val) { getDays()[di].name = val; save(); }
@@ -291,7 +305,6 @@ function render() {
     lastMovedRow = null;
 }
 
-// --- FUNKCJE OPERACYJNE ---
 function toggleEdit(di) { editStates[di] = !editStates[di]; render(); }
 function addRow(di) { getDays()[di].rows.push(["", "", "", ""]); save(); render(); }
 function delRow(di, ri) { if(confirm("Usunąć?")) { getDays()[di].rows.splice(ri, 1); save(); render(); } }
@@ -329,8 +342,6 @@ function deletePlan() {
         save(); location.reload();
     }
 }
-
-// --- IMPORT / EKSPORT ---
 function openExport() {
     const out = [];
     const p = plans[currentPlan];
@@ -371,9 +382,8 @@ function applyImport() {
 }
 function closeModals() { document.querySelectorAll(".modal").forEach(m => m.classList.remove("active")); }
 
-// --- INICJALIZACJA UI ---
 const ps = document.getElementById("planSelect");
-Object.keys(plans).forEach(p => {
+Object.keys(plans).sort().forEach(p => {
     const o = document.createElement("option"); o.value = p; o.textContent = p;
     ps.appendChild(o);
 });
