--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
     <div id="week"></div>
 </main>
 
-<div class="floating-logo" onclick="alert('Koziar Plany v1.91 Mobile-Ready')">
+<a href="test.html" class="floating-logo">
     <img src="logo.png" alt="K" onerror="this.style.display='none'">
 </div>
 
@@ -423,3 +423,4 @@ render();
 </script>
 </body>
 </html>
+
