--- a/test.html
+++ b/test.html
@@ -41,9 +41,30 @@
     <img src="logo.png" alt="K" onerror="this.style.display='none'">
 </div>
 
-<div class="modal" id="exportModal"><div class="modal-box"><h3 style="color:var(--gold);margin-top:0">Eksportuj</h3><textarea id="exportText" style="height:200px;width:100%;background:#000;color:#0d0;font-size:10px;" readonly></textarea><div style="display:grid;grid-template-columns:1fr 1fr;gap:10px;margin-top:10px"><button class="icon-btn gold" style="width:100%" onclick="downloadTSV()">ZAPISZ</button><button class="icon-btn" style="width:100%" onclick="closeModals()">ZAMKNIJ</button></div></div></div>
-<div class="modal" id="importModal"><div class="modal-box"><h3 style="color:var(--gold);margin-top:0">Importuj</h3><input type="file" id="importFile" accept=".tsv,.csv" onchange="handleFileSelect(event)" style="margin-bottom:10px;font-size:12px;"><textarea id="importText" style="height:150px;width:100%;background:#000;color:#fff;"></textarea><div style="display:grid;grid-template-columns:1fr 1fr;gap:10px;margin-top:10px"><button class="icon-btn gold" style="width:100%" onclick="applyImport()">IMPORTUJ</button><button class="icon-btn" style="width:100%" onclick="closeModals()">ANULUJ</button></div></div></div>
+<div class="modal" id="exportModal">
+    <div class="modal-box">
+        <h3 style="color:var(--gold)">Eksportuj plan</h3>
+        <textarea id="exportText" style="width:100%;height:150px;background:#000;color:#0f0;font-size:10px" readonly></textarea>
+        <div style="display:flex;gap:10px;margin-top:10px">
+            <button class="btn-activate" style="margin:0" onclick="downloadTSV()">Zapisz plik</button>
+            <button class="icon-btn" onclick="closeModals()">✕</button>
+        </div>
+    </div>
+</div>
+
+<div class="modal" id="importModal">
+    <div class="modal-box">
+        <h3 style="color:var(--gold)">Importuj plan</h3>
+        <input type="file" id="importFile" accept=".tsv" onchange="handleFileSelect(event)" style="margin-bottom:10px">
+        <textarea id="importText" style="display:none"></textarea>
+        <div style="display:flex;gap:10px">
+            <button class="btn-activate" style="margin:0" onclick="applyImport()">Importuj</button>
+            <button class="icon-btn" onclick="closeModals()">✕</button>
+        </div>
+    </div>
+</div>
 
 <script src="script.js"></script>
 </body>
+
 </html>
