--- a/test.html
+++ b/test.html
@@ -4,14 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Koziar Plany</title>
-    
     <link rel="icon" type="image/png" href="logo.png">
-    <link rel="apple-touch-icon" href="logo.png">
-    
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="theme-color" content="#0a0a0a">
-
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <script src="https://unpkg.com/lucide@latest"></script>
     <link rel="stylesheet" href="style.css">
@@ -23,21 +16,20 @@
     <div class="header-actions">
         <button class="icon-btn gold" onclick="newPlan()"><i data-lucide="plus"></i></button>
         <button class="icon-btn" onclick="resetWeek()"><i data-lucide="rotate-ccw"></i></button>
-        <button class="icon-btn" onclick="openExport()"><i data-lucide="share-2"></i></button>
-        <button class="icon-btn" onclick="openImport()"><i data-lucide="download"></i></button>
+        <button class="icon-btn" onclick="openExport()"><i data-lucide="download"></i></button>
+        <button class="icon-btn" onclick="openImport()"><i data-lucide="upload"></i></button>
         <button class="icon-btn" style="color:var(--danger)" onclick="deletePlan()"><i data-lucide="trash-2"></i></button>
     </div>
 </header>
 
 <main>
-    <div class="notes-area">
-        <label>Notatki i Wskazówki</label>
-        <textarea id="planNotes" placeholder="Np. Tempo pracy, RPE..." oninput="autoHeight(this); saveNotes()"></textarea>
+    <div class="notes-container">
+        <textarea id="planNotes" placeholder="Notatki do planu..." oninput="autoHeight(this); saveNotes()"></textarea>
     </div>
     <div id="week"></div>
 </main>
 
-<div class="floating-logo" onclick="alert('Koziar Plany v1.91 Mobile-Ready')">
+<div class="floating-logo">
     <img src="logo.png" alt="K" onerror="this.style.display='none'">
 </div>
 
@@ -46,7 +38,7 @@
         <h3 style="color:var(--gold)">Eksportuj plan</h3>
         <textarea id="exportText" style="width:100%;height:150px;background:#000;color:#0f0;font-size:10px" readonly></textarea>
         <div style="display:flex;gap:10px;margin-top:10px">
-            <button class="btn-activate" style="margin:0" onclick="downloadTSV()">Zapisz plik</button>
+            <button class="btn-activate" style="margin:0;flex:1" onclick="downloadTSV()">Zapisz plik</button>
             <button class="icon-btn" onclick="closeModals()">✕</button>
         </div>
     </div>
@@ -58,7 +50,7 @@
         <input type="file" id="importFile" accept=".tsv" onchange="handleFileSelect(event)" style="margin-bottom:10px">
         <textarea id="importText" style="display:none"></textarea>
         <div style="display:flex;gap:10px">
-            <button class="btn-activate" style="margin:0" onclick="applyImport()">Importuj</button>
+            <button class="btn-activate" style="margin:0;flex:1" onclick="applyImport()">Importuj</button>
             <button class="icon-btn" onclick="closeModals()">✕</button>
         </div>
     </div>
@@ -66,5 +58,4 @@
 
 <script src="script.js"></script>
 </body>
-
 </html>
